Updated .gitignore to exclude '/env' folder.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-#----------- Python / Django -----------
+#----------- Python / Django / Virtualenv -----------
 *.pyc
+/env/*
 
 #----------- MS Office Ignores -----------
 ~$*
